--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,8 @@ services:
       deploy_on_push: true
     build_command: npm ci && npm run build
     run_command: npm start
+    engine: nodejs
+    engine_version: "22"
     http_port: 3005
     instance_count: 1
     instance_size_slug: basic-xxs # $5/month instance
