--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "22.18.0",
+    "npm": ">=10.0.0"
   },
   "keywords": [],
   "author": "",
