Fix Node.js version specification for DigitalOcean
- Use 22.x instead of specific 22.18.0 for better compatibility
- DigitalOcean will use latest Node.js 22 LTS available

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "engines": {
-    "node": "22.18.0",
+    "node": "22.x",
     "npm": ">=10.0.0"
   },
   "keywords": [],
