--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,7 @@ services:
       repo: rbuddy101/dimes-api
       branch: main
       deploy_on_push: true
-    build_command: npm ci && npm run build
+    build_command: npm ci --include=dev && npm run build
     run_command: npm start
     engine: nodejs
     engine_version: "22"
