--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "engines": {
-    "node": "22.x",
+    "node": ">=22.0.0",
     "npm": ">=10.0.0"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
+    "typescript": "^5.7.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -39,7 +40,6 @@
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^8.57.1",
     "prettier": "^3.4.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "tsx": "^4.19.2"
   }
 }
