--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
     "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
+    "joi": "^18.0.0",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "typescript": "^5.7.2",
