--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8.57.1",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2"
